# memfault_assignment

./: README.md  app.py  pyproject.toml
alembic/: env.py
alembic/versions/: 6abb0726e672_add_device_firmware_update_event_log.py  6d75879b235f_baseline.py  930a78a8d886_add_date_to_firmware_updates.py
memfault_assignment/database/: alembic.ini
memfault_assignment/database/alembic/: env.py
memfault_assignment/database/models/: models.py
models/: models.py
services/: database_service.py  validation_service.py
