[tool.poetry]
name = "memfault-assignment"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "memfault_assignment"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.13"
psycopg2 = "^2.9.6"
alembic = "^1.10.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
