[tool.poetry]
name = "memfault-assignment"
version = "0.1.0"
description = ""
authors = ["Diego Salcovsky <diegosalcovsky@gmail.com>"]
readme = "README.md"
packages = [{include = "memfault_assignment"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.13"
psycopg2 = "^2.9.6"
alembic = "^1.10.4"
flask = "^2.3.2"
flask-sqlalchemy = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
